<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 OTA Update Center

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">About ROM</string>
    
    <string name="notif_text_rom">OTA ROM Update Available</string>
    <string name="notif_source">OTA Updater</string>
    
    <string name="alert_nodata_title">No Data Connection!</string>
    <string name="alert_nodata_message">You have no data connection\nPlease turn on Wi-Fi or Mobile Data in order to check for and download OTA updates.</string>
    <string name="alert_nowifi_title">No Wi-Fi Connection!</string>
    <string name="alert_nowifi_message">You are on a mobile connection\nThis app uses data heavily to download ROM updates.\nIt is recommended to turn on Wi-Fi to avoid overage charges.</string>
    <string name="alert_wifi_settings">Wi-Fi Settings</string>
    <string name="alert_ignore">Ignore</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_options_title">Options</string>
    <string name="alert_rename_title">Rename file</string>
    <string name="alert_rename_message">Enter new file name</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_rename">Rename</string>
    <string name="alert_install_title">Install ZIP</string>
    <string name="alert_install">Install</string>
    <string name="alert_install_message">Installing the file will reboot into recovery to flash the ZIP file. After installation, the system will automatically reboot.</string>
    <string name="alert_noinstall_message">Unfortunately, ROMs on your device must be flashed manually.\nPlease use the correct method for your device to flash the ROM\n\nThe .zip file is located at: %1$s</string>
    <string name="alert_update_title">ROM update available!</string>
    <string name="alert_download">Download</string>
    <string name="alert_downloading">Downloading&#8230;</string>
    <string name="alert_unsupported_title">Unsupported ROM</string>
    <string name="alert_unsupported_message">The ROM developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(otaupdater.otaid value empty or missing)</string>
    <string name="alert_update_to">This update will update your ROM (%1$s) to version %2$s</string>
    <string name="alert_prune_title">Delete files older than</string>
    
    <string name="menu_view">View Downloaded ROMs</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_prune">Delete old Files</string>
    <string name="menu_donate">Donate</string>
    
    <string name="toast_rename">File renamed successfully</string>
    <string name="toast_rename_error">There was a problem while renaming the selected file</string>
    <string name="toast_delete">File deleted succesfully</string>
    <string name="toast_delete_error">There was a problem while deleting the selected file</string>
    <string name="toast_prune">Old file(s) deleted successfully</string>
    <string name="toast_prune_error">There was a problem deleting one or more old files</string>
    <string name="toast_no_updates">There are no updates at this time</string>
    <string name="toast_fetch_error">There was an error fetching OTA information</string>
    <string name="toast_download_nospace">There is not enough available space on your SD card!</string>
    <string name="toast_download_interrupted">The download was interrupted!</string>
    <string name="toast_download_md5_mismatch">MD5 error - downloaded file invalid!</string>
    <string name="toast_download_error">There was an error with the download!</string>
    <string name="toast_nosd_shared">Your SD card is unavailable - mounted as USB Storage</string>
    <string name="toast_nosd_error">Your SD card is unavailable</string>
    
    <string name="about_title">About</string>
    <string name="about_ota_title">OTA Updater</string>
    <string name="about_ota_summary" translatable="false">https://www.otaupdatecenter.pro</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_unknown">Unkown Version (error in package manager)</string>

    <string name="main_rom_info">ROM Information</string>
    <string name="main_author">Author</string>
    <string name="main_homepage">Homepage</string>

    <string name="main_device_info">Device Information</string>
    <string name="main_device">Device</string>
    <string name="main_rom">ROM</string>
    <string name="main_version">ROM Version</string>
    <string name="maim_android_version">Android Version</string>
    <string name="main_otaid">OTA Updater ID</string>
    <string name="main_updates">Updates</string>
    <string name="main_avail_updates">Available Updates</string>
    <string name="main_updates_none">No updates available</string>
    <string name="main_updates_error">Error fetching update info: %1$s</string>
    <string name="main_updates_new">New updates: %1$s (version %2$s)</string>

    <string name="contributors_title">Contributors</string>
    <string name="contributors_error">Error loading contributors file</string>
    
    <string name="license_title">License</string>
    <string name="license_apache_title">Apache License</string>
    <string name="license_error">Error loading license file</string>
    
    <string name="settings_notifications">Notification Settings</string>
    <string name="display_notifications">Show Notifications</string>
    <string name="notify_default">Notifications are on.</string>
    <string name="notify_false">Notifications are off.</string>
</resources>
