<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 OTA Update Center

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference android:layout="@layout/logo_layout" />

        <Preference
            android:title="@string/main_rom"
            android:icon="@drawable/hammer"
            android:key="rom_view" />
        <Preference
            android:title="@string/main_version"
            android:icon="@drawable/version"
            android:key="version_view" />
        <Preference
            android:title="@string/main_author"
            android:icon="@drawable/man"
            android:key="author_view" />
        <Preference
            android:title="@string/main_homepage"
            android:icon="@drawable/home"
            android:key="homepage_view" />
        <Preference
            android:title="@string/main_avail_updates"
            android:icon="@drawable/cloud"
            android:key="avail_updates" />

</PreferenceScreen>